# yt_dlp-integration

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: release.yml  validate.yml
custom_components/youtube_audio_downloader/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  sensor.py  services.yaml  strings.json
custom_components/youtube_audio_downloader/translations/: en.json  pl.json
scripts/: validate_release.py
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_coordinator_sensor.py  test_release_version.py  test_services.py  test_translations.py
