[project]
name = "yt-dlp-integration"
version = "0.2.0"
requires-python = ">=3.14.2"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=custom_components.youtube_audio_downloader --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "ARG001",
  "C901",
  "COM812",
  "D203",
  "D212",
  "EM101",
  "PLR0912",
  "PLR2004",
  "S101",
  "TC001",
  "TC002",
  "TC003",
  "TRY003"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "PLR2004", "S101", "SLF001"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
